implemented delete functionality

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Todo - React Todo-App</title>
   </head>
   <body>
+
+    <div id="todo-wrapper"></div>
     
     <script src="/app/bundle.js"></script>
   </body>
